group 'com.sas.parser'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'antlr'

sourceCompatibility = 21
targetCompatibility = 21

repositories {
  mavenCentral()
}

def antlrVersion = '4.13.2'

dependencies {
  antlr "org.antlr:antlr4:${antlrVersion}"
  implementation "org.antlr:antlr4-runtime:${antlrVersion}"
  implementation("org.apache.commons:commons-lang3:3.0")
  // https://mvnrepository.com/artifact/com.google.guava/guava
  implementation("com.google.guava:guava:11.0.2")
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

generateGrammarSource {
    arguments += ["-visitor", '-listener', "-long-messages"]
    doLast {
        println "Copying generated grammar lexer/parser files to main directory."
        copy {
            from "${buildDir}/generated-src/antlr/main"
            into "src/main/java"
        }
    }
}

clean {
    delete "${buildDir}/generated-src"
}

compileJava {
    dependsOn generateGrammarSource
}

test {
  useJUnitPlatform()
}
